@@ -225,7 +225,7 @@ Disc(
     EIGENVALCOND=EIGENVALCOND_PECLET; 
   );
   MUSCLplus(
-    FLUX=FLUX_FDSplusgen;
+    FLUX=FLUX_FDSplusMultiD;
     numiter=2;
     AVERAGING=AVERAGING_ROE;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
