@@ -157,7 +157,7 @@ Disc(
     zetaA2=0.3e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   MUSCLplus(
-    FLUX=FLUX_FDSplusgen;
+    FLUX=FLUX_FDSplusMultiD;
     numiter=2;
     AVERAGING=AVERAGING_ARITH;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
